# PocketProtectors

./: .gitignore  LICENSE  README.md  _config.yml  index.md  main.py  pyproject.toml
_data/: accolades.json  awards.json  draft-results.json  overall.json  playoffs.json  rosters.json  seasons.json  team-counts.json
_includes/: footer.html  header.html
_pages/: about.md  draft.md  managers.md  plots.md
_pages/manager/: bob.md  brendon.md  brian.md  chris.md  eric.md  jordan.md  keara.md  licata.md  mike.md  pj.md  ryan.md  travis.md
_subpages/manager/: bob.md  brendon.md  brian.md  chris.md  eric.md  jordan.md  keara.md  licata.md  mike.md  pj.md  ryan.md  travis.md
assets/css/: awards.css  tablesort.css
assets/js/: draft-scatter.js  manager-awards.js  manager-chart.js  playoff-chart.js  playoffChart.js  roster-scatter.js  tablesort-init.js  team-counts.js
pages/: plots.md
src/: awards.py  contentgen.py  plotting.py  query.py
