[project]
name = "PocketProtectors"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Travis Bassano", email = "travis.bassano@gmail.com"},
]
dependencies = ["matplotlib>=3.10.6", "pandas>=2.3.2", "numpy>=2.3.2", "yfpy>=16.0.3", "dotenv>=0.9.9", "seaborn>=0.13.2", "plotly>=6.3.0", "adjustText>=1.3.0", "statsmodels>=0.14.5", "networkx>=3.5", "nflreadpy>=0.1.3", "pyarrow>=21.0.0"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
